# Malloc-EPI-2017-2018

./: CMakeLists.txt  Makefile  bin  extern_functions.c  main_test.c  my_free.c  my_malloc.c  my_realloc.c  show_alloc_mem.c
include/: my_malloc.h
tests/: test-extend_heap_usage.c
